RS/Reporting/ReportManager/ReportManagerMVC/ReportManager/Forerunner/Bundles/Forerunner-all.css
/* ... */
.fr-print-section { display: none; }

.fr-print-form { }

.fr-print-options-label { width: 100%; margin: 0 11px 16px 0; display: block; }

.fr-print-margins-label { width: 100%; margin: 12px 0 16px 0; display: block; }

.fr-print-settings-pair-widget { vertical-align: top; display: inline-block; }

.fr-print-form .fr-print-settings { display: inline-table; vertical-align: top; padding: 0; margin: 0 16px 0 0; }

.fr-print-settings td { padding-bottom: 10px; vertical-align: top; }

.fr-print-orientation-container { display: inline-block; margin-right: 11px; }

.fr-print-landscape { width: 44px; height: 31px; display: inline-block; }

.fr-print-landscape-icon { background-image: url(../images/print_landscape.png); }

.fr-print-landscape-icon-active { background-image: url(../images/print_landscape_1.png); }

.fr-print-portrait { width: 31px; height: 37px; margin-right: 14px; display: inline-block; }

.fr-print-portrait-icon { background-image: url(../images/print_portrait.png); }

.fr-print-portrait-icon-active { background-image: url(../images/print_portrait_1.png); }

.fr-print-setting { margin-bottom: 10px; }

.fr-print-label { height: 20px; margin: 0 5px 0px 0; display: inline-block; }

.fr-print-text { width: 50px; height: 20px; font-size: 13pt; font-weight: bold; color: #666666; text-align: right; padding: 0 6px 0 0; border: 1px solid #c6d1e1; }

.fr-print-error-span { margin: 2px 0 0 4px; text-align: right; font-size: 10pt; }

.fr-print-error-position { display: inline-block; }

.fr-print-error { border-width: thin; border-color: red; }


.fr-print-unit-label { width: 20px; font-size: 10pt; color: #999999; margin-left: 4px; }


.fr-render-sort-unsorted { background-image: url('../../reportviewer/Images/NotSorted.gif'); display: inline; background-repeat: no-repeat; padding: 2px 7px 2px 7px; background-position: center; cursor: pointer; float: right; }

.fr-render-sort-descending { background-image: url(../../reportviewer/Images/SortDecending.gif); display: inline; background-repeat: no-repeat; padding: 2px 7px 2px 7px; background-position: center; cursor: pointer; float: right; }

.fr-render-sort-ascending { background-image: url(../../reportviewer/Images/SortAccending.gif); display: inline; background-repeat: no-repeat; padding: 2px 7px 2px 7px; background-position: center; cursor: pointer; float: right; }

.fr-rotate-90 { -webkit-transform: rotate(90deg); -moz-transform: rotate(90deg); -o-transform: rotate(90deg); -ms-transform: rotate(90deg); transform: rotate(90deg); }
.fr-rotate-270 { -webkit-transform: rotate(270deg); -moz-transform: rotate(270deg); -ms-transform: rotate(270deg); -o-transform: rotate(270deg); transform: rotate(270deg); }
.fr-render-error-details { cursor: pointer; color: blue; }

.fr-render-drilldown-collapse { background-image: url('../../reportviewer/Images/Drilldown_Collapse.gif'); display: table-cell;width:15px; background-repeat: no-repeat; padding: 2px 2px 2px 2px; background-position: center; cursor: pointer;background-position:2px 2px; }

.fr-render-drilldown-expand { background-image: url('../../reportviewer/Images/Drilldown_Expand.gif');display: table-cell;width:15px; background-repeat: no-repeat; padding: 2px 2px 2px 2px; background-position: center; cursor: pointer;background-position:2px 2px; }

.fr-render-list-circle { list-style-type: circle; }
.fr-render-list-square { list-style-type: square; }
.fr-render-list-disc { list-style-type: disc; }
.fr-render-list-decimal { list-style-type: decimal; }
.fr-render-list-lower-roman { list-style-type: lower-roman; }
.fr-render-list-lower-latin { list-style-type: lower-latin; }


.fr-render-error { margin: 4px; left: 10px; }

  .fr-render-error h3, h4 { color: red; font-weight: bold; }

/*.fr-render-find-keyword
{
    color:red;
}*/

.fr-render-find-highlight { background-color: Highlight; color: HighlightText; }
.fr-render-bglayer { position: absolute; width: 100%; height: 100%; left: 0; top: 0; z-index: -1; }
.fr-render-error-license { margin: 16px 8px; width: 100%; position: absolute; font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; }
.fr-render-error-license-title { margin: 0px 4px; font-size: 22px; padding: 4px; color: lightslategray; }
.fr-render-error-license-content { font-size: 14px; margin: 0px 4px; padding: 4px; color: black; }
.fr-render-error-license-link { width: 200px; margin: 8px; padding: 6px 0px 6px 18px; }
.fr-render-error-license-link a { text-decoration: none; color: white; font-size: 1.2em; }

.fr-render-rec {display:table;border-collapse:collapse;}
.fr-r-rT{display:table;table-layout: fixed;position:relative;}
.fr-r-t{white-space:pre-wrap;margin:0;display: table-cell; }
.fr-r-pL{width:100%;height:100%;}
.fr-render-image{display:block;max-height:100%;max-width:100%;overflow:hidden;}
.fr-r-tC{vertical-align:top;padding:0;margin:0;}
.fr-r-tCI{margin:0;width:100%;height:100%;overflow:hidden;}
.fr-render-tablix{border-collapse:collapse;padding:0;margin:0;table-layout:fixed;}
.fr-r-fS{width:100%;height:100%;}
.fr-lazyNext{color:blue;font-size:large;}
.fr-report-container {
  position:relative;
  width:100%;
}

.fr-report-areacontainer {
    display:table-cell; 
}
.fr-report-container-translucent
{
    opacity:0.5;
    filter:alpha(opacity=50);
}
.fr-report-loading-indicator  {
  border: solid 2px #86A5AD;
  background: white url(../../reportviewer/Images/ajax-loader1.gif) no-repeat 10px 10px;
  width: 148px; 
  height: 28px; 
  position: absolute; 
  margin-left: auto;
  margin-right:auto;
  padding: 10px 10px 10px 50px;
  text-align: left; 
  line-height: 27px; 
  font-weight: bold; 
  z-index: 2010;
  display:none;
}

.fr-report-center { 
  display: block; 
  margin-left: auto; 
  margin-right: auto;
}

.fr-report-centertext {
  text-align:center;
}

/* Smartphones (landscape) ----------- */
@media only screen and (max-height : 320px) and (min-width : 400px) and (orientation : landscape) {
    /* Styles */


}
/* ... */

